--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             margin-bottom: 25px;
         }
 
-        .button-group { /* New class for button arrangement */
+        .button-group {
             display: flex;
             flex-direction: column; /* Stack buttons vertically on smaller screens */
             gap: 20px; /* Space between buttons */
@@ -90,6 +90,7 @@
         <div class="button-group">
             <a href="mortgagecalc.html" class="calculator-link">Mortgage Calculator</a>
             <a href="hysacalc.html" class="calculator-link">High-Yield Savings Calculator</a>
+            <a href="rentvsbuycalc.html" class="calculator-link">Rent vs. Buy Calculator</a>
         </div>
     </div>
 </body>
