--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             min-width: 280px; /* Ensure buttons don't get too small */
             max-width: calc(50% - 10px); /* Adjust for gap */
             height: 70px; /* Fixed height for consistent look */
+            box-sizing: border-box; /* Include padding in element's total width */
         }
 
         .calculator-link:hover {
@@ -131,6 +132,7 @@
             <a href="hysacalc.html" class="calculator-link">High-Yield Savings Calculator</a>
             <a href="rentvsbuycalc.html" class="calculator-link">Rent vs. Buy Calculator</a>
             <a href="debtpayoffcalc.html" class="calculator-link">Debt Payoff Calculator</a>
+            <a href="loanpaymentcalc.html" class="calculator-link">General Loan Payment Calculator</a>
         </div>
     </div>
 </body>
