--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <a href="rentvsbuycalc.html" class="calculator-link">Rent vs. Buy Calculator</a>
             <a href="debtpayoffcalc.html" class="calculator-link">Debt Payoff Calculator</a>
             <a href="loanpaymentcalc.html" class="calculator-link">General Loan Payment Calculator</a>
+            <a href="ccpayoffcalc.html" class="calculator-link">Credit Card Payoff Calculator</a>
         </div>
     </div>
 </body>
