--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             <a href="debtpayoffcalc.html" class="calculator-link">Debt Payoff Calculator</a>
             <a href="loanpaymentcalc.html" class="calculator-link">General Loan Payment Calculator</a>
             <a href="ccpayoffcalc.html" class="calculator-link">Credit Card Payoff Calculator</a>
+            <a href="compoundinterestcalc.html" class="calculator-link">Compound Interest Calculator</a>
         </div>
     </div>
 </body>
