--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
             <a href="loanpaymentcalc.html" class="calculator-link">General Loan Payment Calculator</a>
             <a href="ccpayoffcalc.html" class="calculator-link">Credit Card Payoff Calculator</a>
             <a href="compoundinterestcalc.html" class="calculator-link">Compound Interest Calculator</a>
+            <a href="retirementcalc.html" class="calculator-link">Retirement Savings Calculator</a>
         </div>
     </div>
 </body>
