--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <a href="ccpayoffcalc.html" class="calculator-link">Credit Card Payoff Calculator</a>
             <a href="compoundinterestcalc.html" class="calculator-link">Compound Interest Calculator</a>
             <a href="retirementcalc.html" class="calculator-link">Retirement Savings Calculator</a>
+            <a href="collegesavingscalc.html" class="calculator-link">College Savings Calculator</a>
         </div>
     </div>
 </body>
