--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             <a href="compoundinterestcalc.html" class="calculator-link">Compound Interest Calculator</a>
             <a href="retirementcalc.html" class="calculator-link">Retirement Savings Calculator</a>
             <a href="collegesavingscalc.html" class="calculator-link">College Savings Calculator</a>
+            <a href="budgetcalc.html" class="calculator-link">Budget Calculator/Planner</a>
         </div>
     </div>
 </body>
