--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <a href="retirementcalc.html" class="calculator-link">Retirement Savings Calculator</a>
             <a href="collegesavingscalc.html" class="calculator-link">College Savings Calculator</a>
             <a href="budgetcalc.html" class="calculator-link">Budget Calculator/Planner</a>
+            <a href="networthcalc.html" class="calculator-link">Net Worth Calculator</a>
         </div>
     </div>
 </body>
