--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             <a href="collegesavingscalc.html" class="calculator-link">College Savings Calculator</a>
             <a href="budgetcalc.html" class="calculator-link">Budget Calculator/Planner</a>
             <a href="networthcalc.html" class="calculator-link">Net Worth Calculator</a>
+            <a href="inflationcalc.html" class="calculator-link">Inflation Calculator</a>
         </div>
     </div>
 </body>
