--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
             <a href="budgetcalc.html" class="calculator-link">Budget Calculator/Planner</a>
             <a href="networthcalc.html" class="calculator-link">Net Worth Calculator</a>
             <a href="inflationcalc.html" class="calculator-link">Inflation Calculator</a>
+            <a href="taxcalc.html" class="calculator-link">Simplified Tax Calculator</a>
         </div>
     </div>
 </body>
