--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             <a href="networthcalc.html" class="calculator-link">Net Worth Calculator</a>
             <a href="inflationcalc.html" class="calculator-link">Inflation Calculator</a>
             <a href="taxcalc.html" class="calculator-link">Simplified Tax Calculator</a>
+            <a href="savingsgoalcalc.html" class="calculator-link">Savings Goal Calculator</a>
         </div>
     </div>
 </body>
