--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
             <a href="inflationcalc.html" class="calculator-link">Inflation Calculator</a>
             <a href="taxcalc.html" class="calculator-link">Simplified Tax Calculator</a>
             <a href="savingsgoalcalc.html" class="calculator-link">Savings Goal Calculator</a>
+            <a href="amortizationcalc.html" class="calculator-link">Amortization Schedule Calculator</a>
         </div>
     </div>
 </body>
