--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             <a href="taxcalc.html" class="calculator-link">Simplified Tax Calculator</a>
             <a href="savingsgoalcalc.html" class="calculator-link">Savings Goal Calculator</a>
             <a href="amortizationcalc.html" class="calculator-link">Amortization Schedule Calculator</a>
+            <a href="emergencyfundcalc.html" class="calculator-link">Emergency Fund Calculator</a>
         </div>
     </div>
 </body>
