--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             <a href="savingsgoalcalc.html" class="calculator-link">Savings Goal Calculator</a>
             <a href="amortizationcalc.html" class="calculator-link">Amortization Schedule Calculator</a>
             <a href="emergencyfundcalc.html" class="calculator-link">Emergency Fund Calculator</a>
+            <a href="ruleof72calc.html" class="calculator-link">Rule of 72 Calculator</a>
         </div>
     </div>
 </body>
