--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
             <a href="amortizationcalc.html" class="calculator-link">Amortization Schedule Calculator</a>
             <a href="emergencyfundcalc.html" class="calculator-link">Emergency Fund Calculator</a>
             <a href="ruleof72calc.html" class="calculator-link">Rule of 72 Calculator</a>
+            <a href="annuityfvcalc.html" class="calculator-link">Annuity Future Value Calculator</a>
         </div>
     </div>
 </body>
