--- a/index.html
+++ b/index.html
@@ -134,6 +134,14 @@
                 min-width: unset; /* Remove min-width to allow shrinking */
             }
         }
+
+        /* Copyright Footer Styling */
+        .footer-copyright {
+            margin-top: 40px; /* Space above copyright */
+            font-size: 0.9em;
+            color: rgba(255, 255, 255, 0.7); /* Lighter color for footer text */
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -144,38 +152,41 @@
         <div class="category-section">
             <h2>Savings & Investments</h2>
             <div class="button-group">
-                <a href="hysacalc.html" class="calculator-link">High-Yield Savings Calculator</a>
-                <a href="compoundinterestcalc.html" class="calculator-link">Compound Interest Calculator</a>
-                <a href="retirementcalc.html" class="calculator-link">Retirement Savings Calculator</a>
-                <a href="collegesavingscalc.html" class="calculator-link">College Savings Calculator</a>
-                <a href="savingsgoalcalc.html" class="calculator-link">Savings Goal Calculator</a>
-                <a href="annuityfvcalc.html" class="calculator-link">Annuity Future Value Calculator</a>
+                <a href="html/hysacalc.html" class="calculator-link">High-Yield Savings Calculator</a>
+                <a href="html/compoundinterestcalc.html" class="calculator-link">Compound Interest Calculator</a>
+                <a href="html/retirementcalc.html" class="calculator-link">Retirement Savings Calculator</a>
+                <a href="html/collegesavingscalc.html" class="calculator-link">College Savings Calculator</a>
+                <a href="html/savingsgoalcalc.html" class="calculator-link">Savings Goal Calculator</a>
+                <a href="html/annuityfvcalc.html" class="calculator-link">Annuity Future Value Calculator</a>
             </div>
         </div>
 
         <div class="category-section">
             <h2>Loans & Debt</h2>
             <div class="button-group">
-                <a href="mortgagecalc.html" class="calculator-link">Mortgage Calculator</a>
-                <a href="loanpaymentcalc.html" class="calculator-link">General Loan Payment Calculator</a>
-                <a href="debtpayoffcalc.html" class="calculator-link">Debt Payoff Calculator</a>
-                <a href="ccpayoffcalc.html" class="calculator-link">Credit Card Payoff Calculator</a>
-                <a href="amortizationcalc.html" class="calculator-link">Amortization Schedule Calculator</a>
+                <a href="html/mortgagecalc.html" class="calculator-link">Mortgage Calculator</a>
+                <a href="html/loanpaymentcalc.html" class="calculator-link">General Loan Payment Calculator</a>
+                <a href="html/debtpayoffcalc.html" class="calculator-link">Debt Payoff Calculator</a>
+                <a href="html/ccpayoffcalc.html" class="calculator-link">Credit Card Payoff Calculator</a>
+                <a href="html/amortizationcalc.html" class="calculator-link">Amortization Schedule Calculator</a>
             </div>
         </div>
 
         <div class="category-section">
             <h2>Planning & Tools</h2>
             <div class="button-group">
-                <a href="budgetcalc.html" class="calculator-link">Budget Calculator/Planner</a>
-                <a href="networthcalc.html" class="calculator-link">Net Worth Calculator</a>
-                <a href="rentvsbuycalc.html" class="calculator-link">Rent vs. Buy Calculator</a>
-                <a href="inflationcalc.html" class="calculator-link">Inflation Calculator</a>
-                <a href="taxcalc.html" class="calculator-link">Simplified Tax Calculator</a>
-                <a href="emergencyfundcalc.html" class="calculator-link">Emergency Fund Calculator</a>
-                <a href="ruleof72calc.html" class="calculator-link">Rule of 72 Calculator</a>
+                <a href="html/budgetcalc.html" class="calculator-link">Budget Calculator/Planner</a>
+                <a href="html/networthcalc.html" class="calculator-link">Net Worth Calculator</a>
+                <a href="html/rentvsbuycalc.html" class="calculator-link">Rent vs. Buy Calculator</a>
+                <a href="html/inflationcalc.html" class="calculator-link">Inflation Calculator</a>
+                <a href="html/taxcalc.html" class="calculator-link">Simplified Tax Calculator</a>
+                <a href="html/emergencyfundcalc.html" class="calculator-link">Emergency Fund Calculator</a>
+                <a href="html/ruleof72calc.html" class="calculator-link">Rule of 72 Calculator</a>
             </div>
         </div>
+    </div>
+    <div class="footer-copyright">
+        &copy; 2025 Aryal & Logistics LLC. All rights reserved.
     </div>
 </body>
 </html>
