Update and rename ccpayoffcalc.html to html/ccpayoffcalc.html

--- a/html/ccpayoffcalc.html
+++ b/html/ccpayoffcalc.html
@@ -91,6 +91,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="ccpayoffcalc-script.js"></script>
+    <script src="scripts/ccpayoffcalc-script.js"></script>
 </body>
 </html>
