--- a/html/rentvsbuycalc.html
+++ b/html/rentvsbuycalc.html
@@ -117,6 +117,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="rentvsbuycalc-script.js"></script>
+    <script src="scripts/rentvsbuycalc-script.js"></script>
 </body>
 </html>
