--- a/html/networthcalc.html
+++ b/html/networthcalc.html
@@ -195,6 +195,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="networthcalc-script.js"></script>
+    <script src="scripts/networthcalc-script.js"></script>
 </body>
 </html>
