--- a/html/inflationcalc.html
+++ b/html/inflationcalc.html
@@ -63,6 +63,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="inflationcalc-script.js"></script>
+    <script src="scripts/inflationcalc-script.js"></script>
 </body>
 </html>
