--- a/html/debtpayoffcalc.html
+++ b/html/debtpayoffcalc.html
@@ -86,6 +86,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="debtpayoffcalc-script.js"></script>
+    <script src="scripts/debtpayoffcalc-script.js"></script>
 </body>
 </html>
