Update and rename hysacalc.html to html/hysacalc.html

--- a/html/hysacalc.html
+++ b/html/hysacalc.html
@@ -43,6 +43,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="hysacalc-script.js"></script>
+    <script src="scripts/hysacalc-script.js"></script>
 </body>
 </html>
