--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); /* Stronger, more prominent shadow */
             max-width: 900px; /* Wider container for categories */
             width: 100%;
-            text-align: center;
+            text-align: center; /* Center all text and inline elements by default */
             backdrop-filter: blur(5px); /* Subtle blur effect on background */
             -webkit-backdrop-filter: blur(5px); /* For Safari */
         }
@@ -55,7 +55,10 @@
         /* Category Section Styling */
         .category-section {
             margin-bottom: 40px;
-            text-align: left; /* Align category title and buttons to the left */
+            /* text-align: left; REMOVED to allow centering by container */
+            max-width: 800px; /* Constrain width to allow centering */
+            margin-left: auto; /* Center the block itself */
+            margin-right: auto; /* Center the block itself */
         }
 
         .category-section h2 {
@@ -65,6 +68,7 @@
             margin-bottom: 25px;
             padding-bottom: 10px;
             border-bottom: 2px solid #eee; /* Subtle separator */
+            text-align: center; /* Explicitly center category titles */
         }
 
         /* Button Group Layout within categories */
@@ -72,7 +76,10 @@
             display: grid; /* Use CSS Grid for flexible layout */
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive columns */
             gap: 20px; /* Consistent gap between buttons */
-            justify-content: center; /* Center buttons if there aren't enough to fill a row */
+            justify-content: center; /* Center buttons within the grid container */
+            /* If you want the grid to explicitly center itself in a narrower parent: */
+            /* max-width: fit-content; */
+            /* margin: 0 auto; */
         }
 
         /* Calculator Link (Button) Styles */
