--- a/html/annuityfvcalc.html
+++ b/html/annuityfvcalc.html
@@ -94,6 +94,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="scripts/annuityfvcalc-script.js"></script>
+    <script src="../../scripts/annuityfvcalc-script.js"></script>
 </body>
 </html>
