--- a/html/budgetcalc.html
+++ b/html/budgetcalc.html
@@ -3,142 +3,189 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Financial Companion</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <style>
-        /* General Body Styles */
-        body {
-            font-family: 'Poppins', sans-serif; /* Modern, clean font */
+    <title>Budget Calculator & Planner</title>
+    <link rel="stylesheet" href="style.css"> <style>
+        .calculator-container {
+            max-width: 600px; /* Wider for more content */
+            padding: 30px;
+        }
+
+        .section-title {
+            font-size: 1.6em;
+            color: #333;
+            margin-top: 30px;
+            margin-bottom: 15px;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 5px;
+        }
+
+        .income-item, .expense-item {
             display: flex;
-            flex-direction: column;
-            justify-content: center;
             align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            background: linear-gradient(to right bottom, #6a11cb, #2575fc); /* Gradient background */
-            color: #333; /* Default text color */
-            overflow-x: hidden; /* Prevent horizontal scroll */
-            padding: 20px; /* Add some padding around the edges */
-            box-sizing: border-box; /* Include padding in element's total width */
+            gap: 10px; /* Space between elements in a row */
+            margin-bottom: 15px; /* Space between rows */
         }
 
-        /* Main Container Styling */
-        .container {
-            background-color: rgba(255, 255, 255, 0.95); /* Slightly transparent white */
-            padding: 50px 30px; /* More vertical padding */
-            border-radius: 15px; /* Softer rounded corners */
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); /* Stronger, more prominent shadow */
-            max-width: 700px; /* Increased max-width for better layout */
-            width: 100%;
-            text-align: center;
-            backdrop-filter: blur(5px); /* Subtle blur effect on background */
-            -webkit-backdrop-filter: blur(5px); /* For Safari */
-        }
-
-        /* Heading Styles */
-        h1 {
-            color: #333; /* Darker text for contrast */
-            margin-bottom: 20px;
-            font-size: 2.8em; /* Larger heading */
-            font-weight: 700; /* Bolder font weight */
-            line-height: 1.2;
-        }
-
-        p {
+        .income-item label, .expense-item label {
+            flex: 2; /* Label takes more space */
+            text-align: right; /* Align label text to the right */
+            font-size: 0.95em;
             color: #555;
-            font-size: 1.1em;
-            line-height: 1.6;
-            margin-bottom: 35px; /* More space below paragraphs */
-            font-weight: 400;
+            padding-right: 10px;
         }
 
-        /* Button Group Layout */
-        .button-group {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px; /* Consistent gap between buttons */
-            margin-top: 40px; /* More space above buttons */
+        .income-item input[type="text"],
+        .expense-item input[type="text"] {
+            flex: 3; /* Name input takes more space */
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 0.9em;
         }
 
-        /* Calculator Link (Button) Styles */
-        .calculator-link {
-            display: flex; /* Use flexbox for centering content */
-            align-items: center; /* Center text vertically */
-            justify-content: center; /* Center text horizontally */
-            background-color: #2575fc; /* Vibrant blue */
+        .income-item input[type="number"],
+        .expense-item input[type="number"] {
+            flex: 2; /* Value input takes proportional space */
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 0.9em;
+            text-align: right; /* Numbers align right */
+        }
+
+        .remove-btn {
+            background-color: #dc3545;
             color: white;
-            padding: 18px 25px; /* Larger padding for a more substantial button */
             border: none;
-            border-radius: 8px; /* Slightly more rounded */
-            text-decoration: none;
-            font-size: 1.15em; /* Slightly larger text */
-            font-weight: 600; /* Semi-bold */
-            transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
-            box-shadow: 0 4px 15px rgba(0, 123, 255, 0.3); /* Softer shadow */
-            flex-grow: 1;
-            min-width: 280px; /* Ensure buttons don't get too small */
-            max-width: calc(50% - 10px); /* Adjust for gap */
-            height: 70px; /* Fixed height for consistent look */
-            box-sizing: border-box; /* Include padding in element's total width */
+            border-radius: 4px;
+            padding: 8px 12px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            font-size: 0.8em;
+            white-space: nowrap; /* Prevent button text from wrapping */
+        }
+        .remove-btn:hover {
+            background-color: #c82333;
         }
 
-        .calculator-link:hover {
-            background-color: #0056b3; /* Darker blue on hover */
-            transform: translateY(-5px); /* More pronounced lift effect */
-            box-shadow: 0 8px 20px rgba(0, 123, 255, 0.4); /* Enhanced shadow on hover */
+        .add-item-btn {
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 15px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-top: 10px;
+            font-size: 1em;
+            width: 100%; /* Make add button full width */
+            box-sizing: border-box;
+        }
+        .add-item-btn:hover {
+            background-color: #218838;
         }
 
-        .calculator-link:active {
-            transform: translateY(0);
-            box-shadow: 0 4px 15px rgba(0, 123, 255, 0.3);
+        .results {
+            margin-top: 30px;
+            padding-top: 20px;
+            border-top: 2px solid #eee;
         }
 
-        /* Responsive Adjustments */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2em;
-            }
-            .container {
-                padding: 40px 20px;
-            }
-            .calculator-link {
-                max-width: 100%; /* Stack buttons on small screens */
-            }
+        .results p.label {
+            font-size: 1.2em;
+            color: #333;
+            margin-bottom: 5px;
+            font-weight: normal;
         }
-
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 1.8em;
-            }
-            p {
-                font-size: 1em;
-            }
-            .calculator-link {
-                font-size: 1em;
-                padding: 15px 20px;
-                min-width: unset; /* Remove min-width to allow shrinking */
-            }
+        .results p.value {
+            font-size: 1.8em; /* Larger for totals */
+            font-weight: bold;
+            margin-top: 0;
+            margin-bottom: 15px;
+        }
+        .results #netBalance.positive {
+            color: #28a745; /* Green for surplus */
+        }
+        .results #netBalance.negative {
+            color: #dc3545; /* Red for deficit */
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Your Financial Companion</h1>
-        <p>Unlock smarter financial decisions with our easy-to-use calculators. Whether you're planning for a home, saving for the future, or tackling debt, we've got a tool to guide you.</p>
-        <p>Choose a calculator below to get started:</p>
-        <div class="button-group">
-            <a href="mortgagecalc.html" class="calculator-link">Mortgage Calculator</a>
-            <a href="hysacalc.html" class="calculator-link">High-Yield Savings Calculator</a>
-            <a href="rentvsbuycalc.html" class="calculator-link">Rent vs. Buy Calculator</a>
-            <a href="debtpayoffcalc.html" class="calculator-link">Debt Payoff Calculator</a>
-            <a href="loanpaymentcalc.html" class="calculator-link">General Loan Payment Calculator</a>
-            <a href="ccpayoffcalc.html" class="calculator-link">Credit Card Payoff Calculator</a>
-            <a href="compoundinterestcalc.html" class="calculator-link">Compound Interest Calculator</a>
-            <a href="retirementcalc.html" class="calculator-link">Retirement Savings Calculator</a>
-            <a href="collegesavingscalc.html" class="calculator-link">College Savings Calculator</a>
-            <a href="budgetcalc.html" class="calculator-link">Budget Calculator/Planner</a>
+    <div class="calculator-container">
+        <h1>Budget Calculator & Planner</h1>
+        <p>Manage your monthly income and expenses to see your net financial standing.</p>
+
+        <h2 class="section-title">Monthly Income</h2>
+        <div id="incomeInputs">
+            <div class="income-item">
+                <label>Main Income:</label>
+                <input type="text" value="Salary">
+                <input type="number" class="income-value" value="3500">
+                <button class="remove-btn" style="visibility: hidden;">Remove</button> </div>
         </div>
+        <button id="addIncomeBtn" class="add-item-btn">Add Another Income Source</button>
+
+        <h2 class="section-title">Monthly Expenses</h2>
+        <div id="expenseInputs">
+            <div class="expense-item">
+                <label>Housing (Rent/Mortgage):</label>
+                <input type="text" value="Rent/Mortgage">
+                <input type="number" class="expense-value" value="1200">
+                <button class="remove-btn" style="visibility: hidden;">Remove</button>
+            </div>
+            <div class="expense-item">
+                <label>Utilities:</label>
+                <input type="text" value="Utilities">
+                <input type="number" class="expense-value" value="200">
+                <button class="remove-btn">Remove</button>
+            </div>
+            <div class="expense-item">
+                <label>Food:</label>
+                <input type="text" value="Groceries & Dining">
+                <input type="number" class="expense-value" value="400">
+                <button class="remove-btn">Remove</button>
+            </div>
+            <div class="expense-item">
+                <label>Transportation:</label>
+                <input type="text" value="Car Payment/Gas/Transit">
+                <input type="number" class="expense-value" value="300">
+                <button class="remove-btn">Remove</button>
+            </div>
+            <div class="expense-item">
+                <label>Debt Payments:</label>
+                <input type="text" value="Credit Cards/Loans">
+                <input type="number" class="expense-value" value="250">
+                <button class="remove-btn">Remove</button>
+            </div>
+            <div class="expense-item">
+                <label>Entertainment:</label>
+                <input type="text" value="Hobbies/Outings">
+                <input type="number" class="expense-value" value="150">
+                <button class="remove-btn">Remove</button>
+            </div>
+            <div class="expense-item">
+                <label>Savings/Investments:</label>
+                <input type="text" value="Savings/Investments">
+                <input type="number" class="expense-value" value="200">
+                <button class="remove-btn">Remove</button>
+            </div>
+        </div>
+        <button id="addExpenseBtn" class="add-item-btn">Add Another Expense</button>
+
+        <div class="results">
+            <h2>Summary:</h2>
+            <p class="label">Total Monthly Income:</p>
+            <p id="totalIncome" class="value">$0.00</p>
+
+            <p class="label">Total Monthly Expenses:</p>
+            <p id="totalExpenses" class="value">$0.00</p>
+
+            <p class="label">Net Monthly Balance:</p>
+            <p id="netBalance" class="value positive">$0.00</p>
+        </div>
+        <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
+    <script src="/../budgetcalc-script.js"></script>
 </body>
 </html>
