--- a/html/budgetcalc.html
+++ b/html/budgetcalc.html
@@ -186,6 +186,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="/../budgetcalc-script.js"></script>
+    <script src="../../budgetcalc-script.js"></script>
 </body>
 </html>
