--- a/html/compoundinterestcalc.html
+++ b/html/compoundinterestcalc.html
@@ -74,6 +74,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="scripts/compoundinterestcalc-script.js"></script>
+    <script src="../../scripts/compoundinterestcalc-script.js"></script>
 </body>
 </html>
