--- a/html/emergencyfundcalc.html
+++ b/html/emergencyfundcalc.html
@@ -162,6 +162,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="scripts/emergencyfundcalc-script.js"></script>
+    <script src="../../scripts/emergencyfundcalc-script.js"></script>
 </body>
 </html>
