--- a/html/loanpaymentcalc.html
+++ b/html/loanpaymentcalc.html
@@ -38,6 +38,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="scripts/loanpaymentcalc-script.js"></script>
+    <script src="../../scripts/loanpaymentcalc-script.js"></script>
 </body>
 </html>
