--- a/html/retirementcalc.html
+++ b/html/retirementcalc.html
@@ -85,6 +85,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="scripts/retirementcalc-script.js"></script>
+    <script src="../../scripts/retirementcalc-script.js"></script>
 </body>
 </html>
