--- a/html/ruleof72calc.html
+++ b/html/ruleof72calc.html
@@ -79,6 +79,6 @@
 
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="scripts/ruleof72calc-script.js"></script>
+    <script src="../../scripts/ruleof72calc-script.js"></script>
 </body>
 </html>
