--- a/html/savingsgoalcalc.html
+++ b/html/savingsgoalcalc.html
@@ -60,6 +60,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="scripts/savingsgoalcalc-script.js"></script>
+    <script src="../../scripts/savingsgoalcalc-script.js"></script>
 </body>
 </html>
