--- a/html/amortizationcalc.html
+++ b/html/amortizationcalc.html
@@ -110,7 +110,7 @@
         <div id="amortizationSchedule" style="display: none;">
             <h2>Amortization Schedule:</h2>
             </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
     <script src="../../scripts/amortizationcalc-script.js"></script>
 </body>
