--- a/html/amortizationcalc.html
+++ b/html/amortizationcalc.html
@@ -112,6 +112,6 @@
             </div>
         <a href="../../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/amortizationcalc-script.js"></script>
+    <script src="../scripts/amortizationcalc-script.js"></script>
 </body>
 </html>
