--- a/html/annuityfvcalc.html
+++ b/html/annuityfvcalc.html
@@ -92,8 +92,8 @@
             <h2>Calculated Future Value:</h2>
             <p id="futureValue" class="value">$0.00</p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/annuityfvcalc-script.js"></script>
+    <script src="../scripts/annuityfvcalc-script.js"></script>
 </body>
 </html>
