--- a/html/budgetcalc.html
+++ b/html/budgetcalc.html
@@ -184,8 +184,8 @@
             <p class="label">Net Monthly Balance:</p>
             <p id="netBalance" class="value positive">$0.00</p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../budgetcalc-script.js"></script>
+    <script src="../budgetcalc-script.js"></script>
 </body>
 </html>
