--- a/html/ccpayoffcalc.html
+++ b/html/ccpayoffcalc.html
@@ -89,8 +89,8 @@
             <p class="label">Time Saved:</p>
             <p class="value saved-highlight" id="timeSaved">0 Years, 0 Months</p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/ccpayoffcalc-script.js"></script>
+    <script src="../scripts/ccpayoffcalc-script.js"></script>
 </body>
 </html>
