--- a/html/collegesavingscalc.html
+++ b/html/collegesavingscalc.html
@@ -95,8 +95,8 @@
             <p class="label">Savings Gap / Surplus:</p>
             <p id="savingsGapSurplus" class="value highlight-positive">$0.00</p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/collegesavingscalc-script.js"></script>
+    <script src="../scripts/collegesavingscalc-script.js"></script>
 </body>
 </html>
