--- a/html/compoundinterestcalc.html
+++ b/html/compoundinterestcalc.html
@@ -72,8 +72,8 @@
             <p class="label">Ending Balance:</p>
             <p id="endingBalance" class="value highlight-balance">$0.00</p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/compoundinterestcalc-script.js"></script>
+    <script src="../scripts/compoundinterestcalc-script.js"></script>
 </body>
 </html>
