--- a/html/emergencyfundcalc.html
+++ b/html/emergencyfundcalc.html
@@ -160,8 +160,8 @@
             <p class="label">Recommended Emergency Fund:</p>
             <p id="recommendedEmergencyFund" class="value">$0.00</p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/emergencyfundcalc-script.js"></script>
+    <script src="../scripts/emergencyfundcalc-script.js"></script>
 </body>
 </html>
