--- a/html/taxcalc.html
+++ b/html/taxcalc.html
@@ -78,6 +78,6 @@
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/taxcalc-script.js"></script>
+    <script src="../scripts/taxcalc-script.js"></script>
 </body>
 </html>
