--- a/html/taxcalc.html
+++ b/html/taxcalc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simplified Income Tax Calculator</title>
-    <link rel="stylesheet" href="../style.css"> 
+    <link rel="stylesheet" href="style.css"> 
     <style>
         /* All the CSS rules for this specific calculator go here */
         .calculator-container {
