--- a/html/savingsgoalcalc.html
+++ b/html/savingsgoalcalc.html
@@ -58,8 +58,8 @@
             <p id="requiredMonthlySavings" class="value highlight-savings">$0.00</p>
             <p id="explanationText" class="disclaimer" style="display:none;"></p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/savingsgoalcalc-script.js"></script>
+    <script src="../scripts/savingsgoalcalc-script.js"></script>
 </body>
 </html>
