--- a/html/ruleof72calc.html
+++ b/html/ruleof72calc.html
@@ -77,8 +77,8 @@
             <p id="requiredRate" class="value highlight-result">---</p>
         </div>
 
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/ruleof72calc-script.js"></script>
+    <script src="../scripts/ruleof72calc-script.js"></script>
 </body>
 </html>
