--- a/html/retirementcalc.html
+++ b/html/retirementcalc.html
@@ -83,8 +83,8 @@
             <p class="label">Projected Balance (Today's Dollars, adjusted for inflation):</p>
             <p id="projectedRealBalance" class="value real-balance highlight-balance">$0.00</p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/retirementcalc-script.js"></script>
+    <script src="../scripts/retirementcalc-script.js"></script>
 </body>
 </html>
