--- a/html/networthcalc.html
+++ b/html/networthcalc.html
@@ -193,8 +193,8 @@
             <p class="label">Your Net Worth:</p>
             <p id="netWorth" class="value positive">$0.00</p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/networthcalc-script.js"></script>
+    <script src="../scripts/networthcalc-script.js"></script>
 </body>
 </html>
