--- a/html/mortgagecalc.html
+++ b/html/mortgagecalc.html
@@ -53,6 +53,6 @@
             <p id="totalCost">$0.00</p>
         </div>
     </div>
-    <script src="../../scripts/script.js"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
