--- a/html/mortgagecalc.html
+++ b/html/mortgagecalc.html
@@ -52,6 +52,7 @@
             <h2>Total Cost of Loan (with Interest):</h2>
             <p id="totalCost">$0.00</p>
         </div>
+          <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
     <script src="../scripts/script.js"></script>
 </body>
