--- a/html/loanpaymentcalc.html
+++ b/html/loanpaymentcalc.html
@@ -36,8 +36,8 @@
             <p>Total Cost of Loan (Principal + Interest):</p>
             <p id="totalCost" class="value">$0.00</p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/loanpaymentcalc-script.js"></script>
+    <script src="../scripts/loanpaymentcalc-script.js"></script>
 </body>
 </html>
