--- a/html/inflationcalc.html
+++ b/html/inflationcalc.html
@@ -61,8 +61,8 @@
             <p class="label">Purchasing Power of Today's Amount (in future dollars):</p>
             <p id="purchasingPower" class="value highlight-power">$0.00</p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/inflationcalc-script.js"></script>
+    <script src="../scripts/inflationcalc-script.js"></script>
 </body>
 </html>
