--- a/html/hysacalc.html
+++ b/html/hysacalc.html
@@ -41,8 +41,8 @@
             <p>Total Interest Earned: <span id="totalInterest">$0.00</span></p>
             <p>Ending Balance: <span id="endingBalance">$0.00</span></p>
         </div>
-        <a href="index.html" class="back-link">← Back to Main Calculators</a>
+        <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/hysacalc-script.js"></script>
+    <script src="../scripts/hysacalc-script.js"></script>
 </body>
 </html>
