--- a/html/budgetcalc.html
+++ b/html/budgetcalc.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budget Calculator & Planner</title>
-    <link rel="stylesheet" href="style.css"> <style>
+    <link rel="stylesheet" href="../style.css"> 
+    <style>
         .calculator-container {
             max-width: 600px; /* Wider for more content */
             padding: 30px;
@@ -122,7 +123,8 @@
                 <label>Main Income:</label>
                 <input type="text" value="Salary">
                 <input type="number" class="income-value" value="3500">
-                <button class="remove-btn" style="visibility: hidden;">Remove</button> </div>
+                <button class="remove-btn" style="visibility: hidden;">Remove</button> 
+            </div>
         </div>
         <button id="addIncomeBtn" class="add-item-btn">Add Another Income Source</button>
 
@@ -186,6 +188,6 @@
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../budgetcalc-script.js"></script>
+    <script src="../../scripts/budgetcalc-script.js"></script>
 </body>
 </html>
